<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColourMain">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:text="@string/width"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lblWidth"
                android:textStyle="normal|bold"
                android:layout_marginTop="15dp"
                android:textAlignment="center"
                android:textColor="@color/greenTrans"
                android:textSize="16sp" />

            <EditText
                android:layout_width="250dp"
                android:ems="10"
                android:id="@+id/txtWidth"
                android:inputType="numberDecimal"
                android:background="@color/holoGreyBlue"
                android:layout_marginTop="40dp"
                android:layout_centerHorizontal="true"
                android:layout_height="35dp"
                android:textAlignment="center"
                android:textStyle="normal|bold" />

            <TextView
                android:text="@string/height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lblHeight"
                android:textStyle="normal|bold"
                android:layout_marginTop="85dp"
                android:textAlignment="center"
                android:textColor="@color/greenTrans"
                android:textSize="16sp" />

            <EditText
                android:layout_width="250dp"
                android:ems="10"
                android:id="@+id/txtHeight"
                android:inputType="numberDecimal"
                android:background="@color/holoGreyBlue"
                android:layout_marginTop="110dp"
                android:layout_centerHorizontal="true"
                android:layout_height="35dp"
                android:textAlignment="center"
                android:textStyle="normal|bold" />

            <TextView
                android:text="@string/area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lblArea"
                android:textAlignment="center"
                android:layout_marginTop="155dp"
                android:textStyle="normal|bold"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtArea"
                android:textAlignment="center"
                android:background="@color/holoGreyGreen"
                android:layout_marginTop="180dp"
                android:layout_centerInParent="false"
                android:layout_centerHorizontal="true"
                android:layout_width="250dp"
                android:layout_height="35dp"
                android:textSize="18sp"
                android:gravity="center_vertical"
                style="?attr/editTextStyle"
                android:textStyle="normal|bold" />

            <TextView
                android:text="@string/perimeter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lblPerimeter"
                android:textAlignment="center"
                android:layout_marginTop="225dp"
                android:textStyle="normal|bold"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtPerimeter"
                android:textAlignment="center"
                android:layout_marginTop="250dp"
                android:background="@color/holoGreyGreen"
                android:layout_centerInParent="false"
                android:layout_centerHorizontal="true"
                android:layout_width="250dp"
                android:layout_height="35dp"
                android:textSize="18sp"
                android:gravity="center_vertical"
                style="?attr/editTextStyle"
                android:textStyle="normal|bold" />

        </RelativeLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/constraintLayoutImgViewContainer"
            android:layout_weight="1"
            android:visibility="invisible">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:srcCompat="@drawable/rectangle"
                android:id="@+id/imgViewRectangle"
                app:layout_constraintBottom_toBottomOf="@+id/constraintLayoutImgViewContainer"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="@+id/constraintLayoutImgViewContainer"
                app:layout_constraintLeft_toLeftOf="@+id/constraintLayoutImgViewContainer"
                app:layout_constraintRight_toRightOf="@+id/constraintLayoutImgViewContainer"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                app:layout_constraintHorizontal_bias="0.93"
                app:layout_constraintVertical_bias="0.52" />

            <TextView
                android:text="@string/x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtRectangleShortSide"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="@+id/constraintLayoutImgViewContainer"
                app:layout_constraintTop_toTopOf="@+id/constraintLayoutImgViewContainer"
                app:layout_constraintLeft_toLeftOf="@+id/imgViewRectangle"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp" />

            <TextView
                android:text="@string/y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtRectangleLongSide"
                android:textAlignment="center"
                android:gravity="top|center_vertical|center_horizontal"
                app:layout_constraintTop_toTopOf="@+id/imgViewRectangle"
                app:layout_constraintRight_toRightOf="@+id/constraintLayoutImgViewContainer"
                app:layout_constraintLeft_toLeftOf="@+id/constraintLayoutImgViewContainer"
                android:layout_marginTop="8dp" />
        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnCalculate"
        android:text="@string/calculate"
        android:onClick="calculatePropertiesOfRectangle"
        android:textStyle="normal|bold"
        android:textSize="24sp"
        android:textColor="@android:color/holo_blue_dark" />

</LinearLayout>